--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -202,7 +202,7 @@
 
 <!-- Fenêtre de chat -->
 <div id="chatbot-box" class="shadow">
-  <div id="chat-header">🤖 Chatbot Lamma </div>
+  <div id="chat-header">🤖 Chatbot Lamma <span id="chat-close">✖</span></div>
   <div id="chat-messages">
     <div class="msg bot">👋 Bonjour ! Je suis votre assistant personnalisé pour la plateforme Lamma. 
       Je peux vous aider à trouver des événements, des espaces disponibles ou des produits en stock.
