--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -2,10 +2,7 @@
 
 <p>
     Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl|raw }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+    <a href="{{ url('app_verify_email') ~ '?token=' ~ token }}">Confirm my Email</a>.
 </p>
 
-<p>
-    Cheers!
-</p>
+<p>Cheers!</p>
