--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,14 +15,14 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
     <div class="checkbox mb-3">
         <label>
@@ -33,5 +33,14 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+
+    <!-- 🔥 New Links Below -->
+    <div class="mt-3">
+        <a href="{{ path('app_forgot_password') }}">Forgot Password?</a>
+    </div>
+
+    <div class="mt-2">
+        <span>Don't have an account?</span> <a href="{{ path('app_register') }}">Sign up here</a>
+    </div>
 </form>
 {% endblock %}
